--- a/new.html
+++ b/new.html
@@ -12,6 +12,7 @@
             <li>
                 Your
                 <br>
+                <img src="https://ca.slack-edge.com/TM7JST4FQ-UM9V7DQG5-c207f285c818-512">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/2tLf1JO5bvE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <table border="1">
                     <tr>
