--- a/new.html
+++ b/new.html
@@ -4,77 +4,6 @@
         <title>Title goes here</title>
     </head>
     <body>
-        <h1>Movie Trailers</h1>
-        <p>
-            Suck an egg! Movies are bad!
-        </p>
-        <ul>
-            <li>
-                Your
-                <br>
-                <img src="https://ca.slack-edge.com/TM7JST4FQ-UM9V7DQG5-c207f285c818-512">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/2tLf1JO5bvE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <table border="1">
-                    <tr>
-                        <td>Rating</td>
-                        <td>5.0/5.0</td>
-                    </tr>
-                    <tr>
-                            <td>Description</td>
-                            <td>It's coarse and it's rough. And it gets everywhere.</td>
-                        </tr>
-                </table>
-                <hr>
-            </li>
-            <li>
-                Grandma
-                <br>
-                <img src="https://scontent-mia3-1.cdninstagram.com/vp/3c6c31e0805235214ce71e7eaed2e838/5E48010F/t51.2885-15/sh0.08/e35/p640x640/47690559_363698501122204_5533816435843198036_n.jpg?_nc_ht=scontent-mia3-1.cdninstagram.com&_nc_cat=104">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/u0py1ECA2eM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <table border="1">
-                        <tr>
-                            <td>Rating</td>
-                            <td>10.0/5.0</td>
-                        </tr>
-                        <tr>
-                                <td>Description</td>
-                                <td>YA YA YA YA YA YA YA YA YA YA YA YA</td>
-                            </tr>
-                    </table>
-                <hr>
-            </li>
-            <li>
-                Sucks
-                <br>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Q0I9W2Apml0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <table border="1">
-                        <tr>
-                            <td>Rating</td>
-                            <td>11.0/5.0</td>
-                        </tr>
-                        <tr>
-                                <td>Description</td>
-                                <td>It's not just a boulder. It's a rock</td>
-                            </tr>
-                    </table>
-                <hr>
-            </li>
-            <li>
-                Eggs!
-                <br>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/2tLf1JO5bvE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <table border="1">
-                        <tr>
-                            <td>Rating</td>
-                            <td>5.0/5.0</td>
-                        </tr>
-                        <tr>
-                                <td>Description</td>
-                                <td>It's coarse and it's rough. And it gets everywhere.</td>
-                            </tr>
-                    </table>
-                <hr>
-            </li>
-        </ul>
+        <img src="https://ca.slack-edge.com/TM7JST4FQ-UM9V7DQG5-c207f285c818-512" height=1536 width=1536>
     </body>
 </html>
