--- a/new.html
+++ b/new.html
@@ -4,6 +4,6 @@
         <title>Title goes here</title>
     </head>
     <body>
-        <img src="https://ca.slack-edge.com/TM7JST4FQ-UM9V7DQG5-c207f285c818-512" height=2560 width=2560>
+        <img src="https://files.slack.com/files-pri/TM7JST4FQ-FPLLCGWD9/ms-6x6t6f.gif">
     </body>
 </html>
