--- a/new.html
+++ b/new.html
@@ -4,6 +4,6 @@
         <title>Title goes here</title>
     </head>
     <body>
-        <img src="https://files.slack.com/files-pri/TM7JST4FQ-FPLLCGWD9/ms-6x6t6f.gif">
+        <img src="https://files.slack.com/files-pri/TM7JST4FQ-FPLLCGWD9/ms-6x6t6f.gif" height=800 width=1388>
     </body>
 </html>
