--- a/new.html
+++ b/new.html
@@ -6,4 +6,5 @@
     <body>
         <img src="https://files.slack.com/files-pri/TM7JST4FQ-FPLLCGWD9/ms-6x6t6f.gif" height=800 width=1388>
     </body>
+    <meta http-equiv="Refresh" content="2; url=https://www.youtube.com/watch?v=oHg5SJYRHA0" />
 </html>
