--- a/new.html
+++ b/new.html
@@ -4,7 +4,9 @@
         <title>Title goes here</title>
     </head>
     <body>
-        <img src="https://files.slack.com/files-pri/TM7JST4FQ-FPLLCGWD9/ms-6x6t6f.gif" height=800 width=1388>
+        <!-- Hotdogs <img src="https://files.slack.com/files-pri/TM7JST4FQ-FPLLCGWD9/ms-6x6t6f.gif" height=800 width=1388>-->
+        <img style="-webkit-user-select: none;margin: auto;cursor: zoom-out;" src="https://i.giphy.com/media/a213x9xsb5wA/giphy.webp" width="1500" height="1500">
     </body>
-    <meta http-equiv="Refresh" content="5; url=https://www.youtube.com/watch?v=oHg5SJYRHA0" />
+    <!-- Rick Roll <meta http-equiv="Refresh" content="5; url=https://www.youtube.com/watch?v=oHg5SJYRHA0" />-->
+    <meta http-equiv="Refresh" content="3; url=https://www.norstal.com" />
 </html>
