--- a/new.html
+++ b/new.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Title goes here</title>
+        <title>YOU'RE IN MY DOMAIN NOW</title>
     </head>
     <body>
         <!-- Hotdogs <img src="https://files.slack.com/files-pri/TM7JST4FQ-FPLLCGWD9/ms-6x6t6f.gif" height=800 width=1388>-->
