--- a/new.html
+++ b/new.html
@@ -3,10 +3,31 @@
     <head>
         <title>YOU'RE IN MY DOMAIN NOW</title>
     </head>
-    <body>
-        <!-- Hotdogs <img src="https://files.slack.com/files-pri/TM7JST4FQ-FPLLCGWD9/ms-6x6t6f.gif" height=800 width=1388>-->
-        <img style="-webkit-user-select: none;margin: auto;cursor: zoom-out;" src="https://i.giphy.com/media/a213x9xsb5wA/giphy.webp" width="1500" height="1500">
+    <body background="https://i.giphy.com/media/a213x9xsb5wA/giphy.webp">
+        <!-- Hotdogs <img src="https://files.slack.com/files-pri/TM7JST4FQ-FPLLCGWD9/ms-6x6t6f.gif" height=800 width=1388>
+        <img style="-webkit-user-select: none;margin: auto;cursor: zoom-out;" src="https://i.giphy.com/media/a213x9xsb5wA/giphy.webp" width="1500" height="1500">-->
+        <div style="text-align: center;">
+            <span style="font-family: monospace;">
+                <span style="color: white;">
+                    <h1>Links Tree:</h1>
+                </span>
+            </span>
+        </div>
+        <div style="text-align: center;">
+            <span style="font-family: monospace;">
+                <span style="color: white;">
+                    <a href="https://www.norstal.com" target="_blank">Norstal Portal</a>
+                </span>
+            </span>
+        </div>
+        <div style="text-align: center;">
+            <span style="font-family: monospace;">
+                <span style="color: white;">
+                    <a href="https://github.com/faradical" target="_blank">GitHub</a>
+                </span>
+            </span>
+        </div>
     </body>
-    <!-- Rick Roll <meta http-equiv="Refresh" content="5; url=https://www.youtube.com/watch?v=oHg5SJYRHA0" />-->
-    <meta http-equiv="Refresh" content="3; url=https://www.norstal.com" />
+    <!-- Rick Roll <meta http-equiv="Refresh" content="5; url=https://www.youtube.com/watch?v=oHg5SJYRHA0" />
+    <meta http-equiv="Refresh" content="3; url=https://www.norstal.com" />-->
 </html>
