--- a/new.html
+++ b/new.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
+<style type="text/css">
+    html, 
+    body {
+        height: 100%;
+    }
+
+    body {
+        background-image: url(https://i.giphy.com/media/a213x9xsb5wA/giphy.webp);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+</style>
 <html>
     <head>
         <title>YOU'RE IN MY DOMAIN NOW</title>
     </head>
-    <body background="https://i.giphy.com/media/a213x9xsb5wA/giphy.webp">
+    <body>
         <!-- Hotdogs <img src="https://files.slack.com/files-pri/TM7JST4FQ-FPLLCGWD9/ms-6x6t6f.gif" height=800 width=1388>
         <img style="-webkit-user-select: none;margin: auto;cursor: zoom-out;" src="https://i.giphy.com/media/a213x9xsb5wA/giphy.webp" width="1500" height="1500">-->
         <div style="text-align: center;">
