--- a/new.html
+++ b/new.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+-<!DOCTYPE html>
 <style type="text/css">
     html, 
     body {
@@ -22,6 +22,7 @@
             <span style="font-family: monospace;">
                 <span style="color: white;">
                     <h1>Links Tree:</h1>
+                -    <a href="sms:1-678-977-0358">New SMS Message</a>-
                 </span>
             </span>
         </div>
