--- a/new.html
+++ b/new.html
@@ -22,7 +22,7 @@
             <span style="font-family: monospace;">
                 <span style="color: white;">
                     <h1>Links Tree:</h1>
-                -    <a href="sms:1-678-977-0358">New SMS Message</a>-
+                    <input type="file" accept="image/*" capture="camera">
                 </span>
             </span>
         </div>
