--- a/new.html
+++ b/new.html
@@ -22,7 +22,7 @@
             <span style="font-family: monospace;">
                 <span style="color: white;">
                     <h1>Links Tree:</h1>
-                    <input type="file" accept="image/*" capture="camera">
+                    <input type="file" accept="image/*;capture=camera">
                 </span>
             </span>
         </div>
